# dynamic-neural-field-composer

./: .clang-tidy  .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IconsFontAwesome6_8h.html  IconsFontAwesome6_8h__dep__incl.map  IconsFontAwesome6_8h__dep__incl.md5  IconsFontAwesome6_8h_source.html  README.md  README_8md.html  _formulas.tex  _formulas_dark.tex  activation__function_8cpp.html  activation__function_8cpp__incl.map  activation__function_8cpp__incl.md5  activation__function_8h.html  activation__function_8h__dep__incl.map  activation__function_8h__dep__incl.md5  activation__function_8h__incl.map  activation__function_8h__incl.md5  activation__function_8h_source.html  annotated.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  asymmetric__gauss__kernel_8cpp.html  asymmetric__gauss__kernel_8cpp__incl.map  asymmetric__gauss__kernel_8cpp__incl.md5  asymmetric__gauss__kernel_8h.html  asymmetric__gauss__kernel_8h__dep__incl.map  asymmetric__gauss__kernel_8h__dep__incl.md5  asymmetric__gauss__kernel_8h__incl.map  asymmetric__gauss__kernel_8h__incl.md5  (+2345 more)
dynamic-neural-field-composer/: CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  README.md  build.bat  build.sh  build_macos.sh  setup.bat  setup.sh
dynamic-neural-field-composer/data/: per - out_output field.txt  per - out_perceptual field.txt
dynamic-neural-field-composer/data/Weighted field couplings (example)/: Weighted field couplings (example).dnf
dynamic-neural-field-composer/data/all-elements/: all-elements.json  field coupling_weights.txt
dynamic-neural-field-composer/data/detection-instability/: detection-instability.dnf
dynamic-neural-field-composer/data/exports/: hand position stimulus_output_2025-10-03_15-34-04.4113433.txt
dynamic-neural-field-composer/data/hri-packaging-task-stimmed/: hri-packaging-task-stimmed.dnf
dynamic-neural-field-composer/data/inhibition-of-return/: inhibition-of-return.dnf
dynamic-neural-field-composer/data/inter-field-synaptic-connections/: coupling source-output_weights.txt  per - out_weights.txt
dynamic-neural-field-composer/data/memory-instability/: memory-instability.dnf
dynamic-neural-field-composer/data/memory-trace/: memory-trace.dnf
dynamic-neural-field-composer/data/selection-instability/: selection-instability.dnf
dynamic-neural-field-composer/data/simulations/: 100 nf architecture.json  2d-kernels.json  all elements test.json  all-elements.json  and-test.json  and.json  color-space-mapping.json  default simulation.json  delayed-match-to-sample.json  detection-instability.json  hri-packaging-task-stimmed.json  inhibition-of-return.json  memory-instability.json  memory-trace.json  packaging task control architecture.json  selection-instability.json  selection.json  self-sustained-memory.json  self_sustained.json  simulationspackaging task minimal topology dimension 60.json  simulationstessa example.json  single-bump-propagation.json  solution 142004 generation 72 species 339 fitness 0.950413.json  solution 142004 generation 72 species 339 fitness 0.950413.jsondefault sim [2025-03-21] [11-34-11].json  solution 15233 generation 32 species 2 fitness 0.950102.json  solution 1613 generation 17 species 15 fitness 0.837924.json  solution 1613 generation 17 species 15 fitness 0.837924.jsondefault sim [2025-03-21] [11-36-55].json  solution 300660 generation 200 species 70 fitness 0.904655.json  template-hri-packaging-task.json  test-2d-elements.json  test-dmts.json  test-hri-packaging-task.json  test-ior.json  timing.json  working-memory.json  xor.json
dynamic-neural-field-composer/data/test/: test.dnf
dynamic-neural-field-composer/data/xor/: xor.dnf
dynamic-neural-field-composer/examples/: CMakeLists.txt  benchmark_headless.cpp  benchmark_headless_2d.cpp  boost_detection.cpp  boost_detection_2d.cpp  collapse_expand.cpp  cross_platform_validation_runner.cpp  cross_platform_validation_runner_2d.cpp  delta_rule_learning.cpp  detection_instability.cpp  detection_instability_2d.cpp  dimensionality_collapse_expand.cpp  ex_asymmetric_gauss_kernel.cpp  ex_benchmark.cpp  ex_boost_stimulus.cpp  ex_boost_stimulus_2d.cpp  ex_competitive_selection.cpp  ex_complementary_action_selection.cpp  ex_cross_dimension_kernels.cpp  ex_field_coupling_learning.cpp  ex_field_couplings.cpp  ex_field_expansion.cpp  ex_field_projection.cpp  ex_fixed_layout_test.cpp  ex_gauss_and_field_couplings.cpp  ex_grand_architecture.cpp  ex_memory_trace.cpp  ex_neural_field_2d.cpp  ex_oscillatory_kernel_2d.cpp  ex_packaging_task.cpp  ex_timed_gauss_stimulus.cpp  ex_timed_gauss_stimulus_2d.cpp  ex_two_robot_team.cpp  gaussian_field_coupling.cpp  hebbian_learning.cpp  memory_instability.cpp  memory_instability_2d.cpp  memory_trace.cpp  memory_trace_2d.cpp  multi_peak.cpp  (+12 more)
dynamic-neural-field-composer/include/: dynamic-neural-field-composer-dynamic.h  dynamic-neural-field-composer-static.h  dynamic-neural-field-composer.h
dynamic-neural-field-composer/resources/: doxygen-custom.css  imgui.ini  resources.aps  style.json  style_light_green_accent.json  style_modern_light.json
dynamic-neural-field-composer/scripts/: README.md  build.bat  build.sh  build_macos.sh  install.bat  install.sh  setup.bat  setup.sh
dynamic-neural-field-composer/src/: dynamic-neural-field-composer-dynamic.cpp  dynamic-neural-field-composer-static.cpp  dynamic-neural-field-composer.cpp
dynamic-neural-field-composer/tests/: CMakeLists.txt  test_exception.cpp  test_gauss_stimulus.cpp  test_kernels.cpp  test_math.cpp  test_simulation_file_manager.cpp  test_visualization.cpp
dynamic-neural-field-composer/wiki/: Application-and-UI.md  Architecture.md  Benchmarking-and-Validation.md  Element-Reference.md  Elements.md  Examples.md  Getting-Started.md  Home.md  How to Add New Elements.md  How to Create and Run Your Own Example Executable.md  Simulation.md  Testing.md  Visualization.md
search/: all_0.js  all_1.js  (+154 more)
(+1410 files in other folders)
